# aisnp

./: .gitignore  .~lock.logic.ods#  README.md  aisnp.code-workspace  logic.ods  pyproject.toml
config/: dclass.yml  ib_trade_codes.yml  snp_config.yml
data/: df_cov.pkl  df_deorph.pkl  df_nkd.pkl  df_oo.pkl  df_pf.pkl  df_protect.pkl  df_reap.pkl  df_unds.pkl  nkd_trades.pkl  protect_rolls.pkl  traded_covers.pkl  traded_deorphs.pkl  traded_nakeds.pkl  traded_protects.pkl  traded_reaps.pkl  und_contracts.pkl
report/: report_20250208_18.html  report_20250211_22.html  report_20250212_07.html  report_20250214_09.html  report_20250218_14.html  report_20250220_22.html  report_20250221_22.html  report_20250224_22.html  report_20250225_22.html  report_20250226_22.html  report_20250228_21.html  report_20250307_20.html  report_20250313_22.html  report_20250314_21.html  report_20250319_22.html  report_20250320_14.html  report_20250321_20.html  report_20250323_20.html  report_20250325_19.html  report_20250326_12.html  report_20250327_20.html  report_20250330_11.html  report_20250404_09.html  report_20250408_17.html  report_20250410_20.html  report_20250413_17.html  report_20250416_20.html  report_20250417_21.html  report_20250420_20.html  report_20250423_20.html  report_20250719_16.html  report_20250722_08.html  report_20250723_08.html  report_20250724_07.html  report_20250724_08.html
src/: analysis.py  analysis1.py  build_unds_chains.py  chains.py  display_in_html.py  ibfuncs.py  order.py  roll_protects.py  snp.py  states.py  styles.css  trade_analysis.py  utils.py  vacuous.py  (+3 more)
(+12 files in other folders)
