[project]
name = "aisnp"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "reservoirinvest", email = "reservoirinvest@gmail.com"},
]
dependencies = [
    "ipykernel>=6.29.5",
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "pytz>=2024.2",
    "pyyaml>=6.0.2",
    "loguru>=0.7.2",
    "scipy>=1.14.1",
    "jupyterlab>=4.3.4",
    "tqdm>=4.66.5",
    "ruff>=0.6.9",
    "click>=8.1.7",
    "from-root>=1.3.0",
    "python-dotenv>=1.0.1",
    "lxml>=5.3.0",
    "yfinance>=0.2.44",
    "ibapi>=9.81.1.post1",
    "pandas-datareader>=0.10.0",
    "jupyter>=1.1.1",
    "black>=24.10.0",
    "ib-async>=1.0.3",
    "tzdata>=2024.2",
    "pandas-market-calendars>=4.6.0",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "streamlit>=1.41.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
